--- a/index.html
+++ b/index.html
@@ -670,15 +670,12 @@
                     passwordHash: passwordHash
                 });
 
-              if (response.success) {
-    const userId = document.getElementById('loginUserId').value.trim();
-    localStorage.setItem('loggedInUserId', userId);
-    localStorage.setItem('loginTime', new Date().toISOString());
-    
-    showMessage('Login successful! Redirecting...', 'success');
-    setTimeout(() => {
-        window.location.href = 'portalmc.html';
-    }, 1500);
+                if (response.success) {
+                    showMessage('Login successful! Redirecting...', 'success');
+                    setTimeout(() => {
+                        // Redirect to dashboard or home page
+                        window.location.href = 'portalmc.html'; // Update with your dashboard URL
+                    }, 1500);
                 } else {
                     showMessage(response.message || 'Login failed. Please check your credentials.', 'error');
                 }
