--- a/portalmc.html
+++ b/portalmc.html
@@ -377,7 +377,7 @@ if (!loggedInUserId) {
                                     <div>
                                         <h1 className="text-2xl sm:text-3xl font-bold text-gray-800">RNA Courtyard CHSL</h1>
                                         <p className="text-lg sm:text-xl text-indigo-600 font-semibold">Approval Management System (Managing Committee Portal)</p>
-<p className="text-sm text-Red-300 font-semibold mt-1">👤 Logged in as: {loggedInUserId}</p>
+<p className="text-sm text-Red-300 font-semibold mt-1">👤 User ID: {loggedInUserId}</p>
 
                                     </div>
                                 </div>
@@ -575,5 +575,6 @@ if (!loggedInUserId) {
     </script>
 </body>
 </html>
+
 
 
